# autoproger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run_admin.py
agents/: __init__.py  analyst.py  base.py  developer.py  devops.py  planner.py  qa.py  reviewer.py  tester.py
api/: app.py  auth.py  progress.py  schemas.py
api/routes/: auth.py  config.py  repos.py  runs.py  tasks.py  webhooks.py
bot/: bot.py  handlers.py  notifications.py
context/: builder.py  chunker.py  indexer.py
core/: config.py  models.py  orchestrator.py  task_manager.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  Layout.tsx  api.ts  index.css  useAuth.ts
integrations/: __init__.py  base.py  git_client.py  github_client.py  gitlab_client.py  issue_watcher.py  repo_manager.py  triggers.py
llm/: __init__.py  anthropic_provider.py  base.py  claude_code_provider.py  openrouter_provider.py  router.py
orchestrator/: __init__.py  main.py  router.py  security.py  workflow.py
quality/: runner.py
scripts/: claude_auth.py
src/: __init__.py  config.py  connection_config.py  llm.py  models.py  repo_client.py
src/admin/: __init__.py  app.py  auth.py  config_store.py  github_repos.py  gitlab_projects.py  schemas.py
src/agents/: __init__.py  (+2 more)
state/: __init__.py  models.py  store.py
storage/: database.py  models.py  repositories.py
templates/: pull_request.md
tests/: e2e_test.py  fakes.py  smoke_api.py
workflows/: __init__.py  quality_gates.py
(+11 files in other folders)
